--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,7 +54,7 @@ jobs:
           context: ./image-updater/source-code
           file: ./image-updater/source-code/Dockerfile
           push: true
-          tags: ghcr.io/gitops_courselevel2:${{ inputs.docker_tag }}
+          tags: ghcr.io/josine969/gitops_courselevel2:${{ inputs.docker_tag }}
 
 
 
